--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -18,8 +18,8 @@
                         </div>
 
                         <div class="form-group">
-                            <label [(ngModel)]='user.usuario' for="usuario">Usuário</label>
-                            <input class="form-control" type="text" name="usuario" id="usuario" 
+                            <label for="usuario">Usuário</label>
+                            <input [(ngModel)]='user.usuario' class="form-control" type="text" name="usuario" id="usuario" 
                             placeholder="Seu usuario">
                         </div>
 
@@ -40,6 +40,18 @@
                             <input [(ngModel)]='user.senha' class="form-control" type="password" name="confirmeSenha" id="confirmeSenha" 
                             placeholder="Confirme sua senha">
                         </div>
+
+                        <div class="form-group">
+                            <label for="confirmeSenha">Data de Nascimento</label>
+                            <input [(ngModel)]='user.dataNascimento' class="form-control"
+                            type="date" 
+                            name="dataNasc" 
+                            id="dataNasc" 
+                            placeholder="Confirme sua senha">
+                        </div>
+
+
+
 
                         <div class="form-group">
                             <label for="tipo">Tipo de Usuário</label>
