--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -35,21 +35,73 @@
     <div class="nav nav-tabs d-flex justify-content-center font-weight-bold" id="nav-tab" role="tablist">
         <a class="nav-item nav-link active text-secondary" id="nav-todasPostagens-tab" data-toggle="tab" href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as postagens
         </a>
-        <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#nav-minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens
+        <a (click)='findByIdUser()'  class="nav-item nav-link text-secondary font-weight-bold" id="nav-minhasPostagens-tab" data-toggle="tab" href="#nav-minhasPostagens" role="tab" aria-controls="nav-minhasPostagens" aria-selected="false">Minhas postagens
         </a>
         <a class="nav-item nav-link text-secondary font-weight-bold" id="nav-postagemTema-tab" data-toggle="tab" href="#nav-postagemTema" role="tab" aria-controls="nav-postagemTema" aria-selected="false">Postagens por tema 
         </a>
     </div>
   </nav>
 
-    <div class="tab-content" id="nav-tabContent">
+    <div class="tab-content mt-5" id="nav-tabContent">
     
-    <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">Todas as postagens</div>
+    <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+      
+      <div class="card-columns">
+        <div class="card text-center" *ngFor='let item of listaPostagens'>
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted "> Tema:{{item.tema.descricao}}</small>
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">
+              {{item.date | date: 'dd/MM/yyyy'}} ás {{item.date | date: 'HH:mm'}}
+            </small></p>
+          </div>
+      </div>
+      </div>
 
-    <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" aria-labelledby="nav-minhasPostagens">Minhas postagens</div>
+    <div class="tab-pane fade" id="nav-minhasPostagens" role="tabpanel" 
+    aria-labelledby="nav-minhasPostagens-tab">
 
-    <div class="tab-pane fade" id="nav-postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema">Postagens por tema
+      <div class="card-columns">
+        <div class="card text-center" *ngFor='let item of user.postagem'>
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <small class="text-muted "> Tema:{{item.tema.descricao}}</small>
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">
+              {{item.date | date: 'dd/MM/yyyy'}} ás {{item.date | date: 'HH:mm'}}
+            </small></p>
+
+            <p class="card-text"><small class="text-muted">
+              by: {{item.usuario.nome}}
+            </small></p>
+
+          </div>
+      </div>
+      </div>
+
     </div>
+
+    <div class="tab-pane fade" id="nav-postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema">
+
+      <div class="card-columns" *ngFor='let tema of  listaTemas'>
+        <div class="card text-center" *ngFor='let item of tema.postagem'>
+          <div class="card-body">
+            <h5 class="card-title m-0">{{item.titulo}}</h5>
+            <p class="card-text mt-3">{{item.texto}}</p>
+            <p class="card-text"><small class="text-muted">
+              {{item.date | date: 'dd/MM/yyyy'}} ás {{item.date | date: 'HH:mm'}}
+            </small></p>
+
+            <p class="card-text"><small class="text-muted">
+              by: {{item.usuario.nome}}
+            </small></p>
+
+          </div>
+      </div>
+      </div>
+    </div>
+    
 
     </div>
 </div>
@@ -71,25 +123,27 @@
 
             <div class="form-group">
                 <label for="titulo">Titulo</label>
-                <input type="text" class="form-control" id="titulo" placeholder="Digite o título">
+                <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o título">
             </div>
 
             <div class="form-group">
                 <label for="texto">Texto</label>
-                <textarea class="form-control" name="texto" id="texto"  rows="3"></textarea>
+                <textarea [(ngModel)]='postagem.texto' class="form-control" name="texto" id="texto"  rows="3"></textarea>
             </div>
 
             <div class="form-group">
                 <label for="texto">Escolha um tema ou <a data-dismiss="modal" routerLink='/tema'>cadastre um novo</a>: </label>
-                <select name="tema" id="tema" class="form-control">
-                    <option value="">Temas</option>
+                <select name="tema" id="tema" class="form-control" [(ngModel)]='idTema' (change) = 'findByIdTema()'>
+                    <option *ngFor='let item of listaTemas' value="{{item.id}}">
+                    {{item.descricao}}
+                  </option>
                 </select>
             </div>
 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
-          <button type="button" class="btn btn-success">Publicar</button>
+          <button type="button" class="btn btn-success" (click)='publicar()' data-dismiss="modal">Publicar</button>
         </div>
       </div>
     </div>
